--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -91,3 +91,6 @@ footer {
         height: 70%;
     }
 }
+.clear			{ clear:both; }
+.photo-link		{ padding:5px; margin:5px; border:1px solid #ccc; display:block; width:200px; float:left; }
+.photo-link:hover	{ border-color:#999; }
